Hero spacing fixes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -68,7 +68,7 @@
   } */
   #hero h2 {
     font-size: 28px;
-    margin-top: 48px;
+    margin-top: 64px;
     margin-bottom: 20px;
   }
 }
