--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -86,7 +86,7 @@ $font-secondary: 'Koulen', sans-serif;
 
     #hero h2 {
         font-size: 28px;
-        margin-top: 48px;
+        margin-top: 64px;
         margin-bottom: 20px;
     }
 }
